test using esp32/m5stack-atom instead of esp8266/d1_mini

--- a/test/improv-serial-esphome-device.yaml
+++ b/test/improv-serial-esphome-device.yaml
@@ -1,8 +1,11 @@
 esphome:
   name: improv-serial-esphome-device
 
-esp8266:
-  board: d1_mini
+# esp8266:
+#   board: d1_mini
+
+esp32:
+  board: m5stack-atom
 
 logger:
 
